Templating for "technology" section.

--- a/app/index.html
+++ b/app/index.html
@@ -87,13 +87,7 @@
     <section id="technology" class="section">
         <div class="intro-area">
             <h2>{{ technology.title }}</h2>
-            <div class="intro">
-                Aikumon data-analytiikka toimii palveluina pilviarkkitehtuurissa (Analytics as a Service, AaaS). Käytämme
-                standardeja Web-teknologian rajapintoja, protokollia ja turvaratkaisuja. Tietoja voidaan lukea helposti
-                esimerkiksi automaatiojärjestelmistä, tietokannoista, mittausverkoista sekä kerätä avointa dataa mistä
-                tahansa ulkopuolisesta lähteestä. Palvelumme toimivat pilvessä tai haluttaessa virtuaalikoneena asiakkaan omassa IT-infrassa, samoilla
-                standardirajapinnoilla.
-            </div>
+            <div class="intro">{{ technology.intro }}</div>
         </div>
         <img src="images/technology.svg"/>
     </section>
