Fix broken team images when building for dist.

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
         <ul>
             <% team.members.forEach(function(member) { %>
                 <li>
-                    <div class="frame" style="background-image: url('../images/{{ member.image }}')"></div>
+                    <div class="frame" style="background-image: url('images/{{ member.image }}')"></div>
                     <h3>{{ member.name }}</h3>
                     <p>{{ member.title }}</p>
                 </li>
